proj1/tests/other-tests/oskis-angels_tests/correct/overload.py
def overload(n):
    return n

def overload(n1, n2):
    return n1 + n2

def overload(n1, n2, n3):
    return n1 * n2 + n3
