proj1/tests/other-tests/oskis-angels_tests/error/star_args.py
def main(x, *args, **kwargs):
    return x
